# EvgeniyOnegin-FTL

./: CMakeLists.txt  Makefile  README.md  data.txt  main  main.cpp
include/: Composition.h  Poem.h
src/: Composition.cpp  Line.cpp  Line.h  Poem.cpp  RNG.cpp  RNG.h  composition.cpp  composition.hpp  line.cpp  line.hpp  main.cpp  poem.cpp  poem.hpp  rng.cpp
